JumpScript/tests/baselines/reference/funduleSplitAcrossFiles.errors.txt
tests/cases/compiler/funduleSplitAcrossFiles_module.jump(1,8): error TS2433: A namespace declaration cannot be in a different file from a class or function with which it is merged.


==== tests/cases/compiler/funduleSplitAcrossFiles_function.jump (0 errors) ====
    function D() { }
    
==== tests/cases/compiler/funduleSplitAcrossFiles_module.jump (1 errors) ====
    module D {
           ~
!!! error TS2433: A namespace declaration cannot be in a different file from a class or function with which it is merged.
        export var y = "hi";
    }
    D.y;